<resources>
    <string name="app_name">Calculator</string>
    <string name="btn_history_label">History</string>
    <string name="btn_rotate_desc">Rotate</string>
    <string name="btn_backspace_label">Backspace</string>
    <string name="btn_more_label">MORE</string>
    <string name="btn_rad_label">RAD</string>
    <string name="btn_sqrt_label">√</string>
    <string name="btn_clear_label">C</string>
    <string name="btn_parentheses_label">()</string>
    <string name="btn_percent_label">%</string>
    <string name="btn_devide_label">÷</string>
    <string name="btn_sin_label">sin</string>
    <string name="btn_cos_lalbel">cos</string>
    <string name="btn_tan_label">tan</string>
    <string name="btn_ln_label">ln</string>
    <string name="btn_log_label">log</string>
    <string name="btn1dx">1/x</string>
    <string name="btn_num7_label">7</string>
    <string name="btn_num8_label">8</string>
    <string name="btn_num9_label">9</string>
    <string name="btn_multifly_label">⨯</string>
    <string name="btn_num4_label">4</string>
    <string name="btn_num5_label">5</string>
    <string name="btn_num6_label">6</string>
    <string name="btn_num1_label">1</string>
    <string name="btn_num2_label">2</string>
    <string name="btn_num3_label">3</string>
    <string name="btn_plus_label">+</string>
    <string name="btn_dot_label">.</string>
    <string name="btn_num0_label">0</string>
    <string name="btn_plus_minus_label">±</string>
    <string name="btn_equal_label">=</string>
    <string name="btn_minus_label">−</string>
    <string name="btn_ex_label">eⁿ</string>
    <string name="btn_x2_label">x²</string>
    <string name="btn_xn_label">xⁿ</string>
    <string name="btn_absx_label">|x|</string>
    <string name="btn_pi_label">π</string>
    <string name="btn_a_label">e</string>
    <string name="edt_expression_hint">Expression</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_rad_text">RAD</string>
</resources>
