<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    android:background="@android:color/white"
    tools:context=".fragments.CalculatorFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtExpression"
            android:layout_gravity="top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            tools:targetApi="o"
            android:hint="@string/edt_expression_hint"
            android:inputType="text"
            android:autofillHints="no" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="start"
                android:text="@string/txt_rad_text"
                android:id="@+id/txtRad"
                android:visibility="invisible"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtResult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end" />

        </LinearLayout>

    </LinearLayout>

    <TableLayout
        android:gravity="bottom"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow>

            <Button
                android:id="@+id/btnHistory"
                style="?android:attr/borderlessButtonStyle"
                android:layout_margin="2dp"
                android:text="@string/btn_history_label"
                android:textColor="#37474F"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/btnRotate"
                style="?android:attr/borderlessButtonStyle"
                android:layout_margin="2dp"
                android:src="@drawable/ic_screen_rotation_24dp"
                android:contentDescription="@string/btn_rotate_desc" />

            <ImageButton
                android:layout_column="3"
                android:id="@+id/btnBackspace"
                style="?android:attr/borderlessButtonStyle"
                android:layout_margin="2dp"
                android:src="@drawable/ic_backspace_24dp"
                android:textColor="#37474F"
                android:contentDescription="@string/btn_backspace_label" />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btnClear"
                style="?android:attr/borderlessButtonStyle"
                android:layout_margin="2dp"
                android:background="@drawable/round_button"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/btn_clear_label"
                android:textColor="#E53935"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btnParentheses"
                style="?android:attr/borderlessButtonStyle"
                android:layout_margin="2dp"
                android:background="@drawable/round_button"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/btn_parentheses_label"
                android:textColor="@color/colorPrimary"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btnPercent"
                style="?android:attr/borderlessButtonStyle"
                android:layout_margin="2dp"
                android:background="@drawable/round_button"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/btn_percent_label"
                android:textColor="@color/colorPrimary"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btnDevide"
                style="?android:attr/borderlessButtonStyle"
                android:layout_margin="2dp"
                android:background="@drawable/round_button"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/btn_devide_label"
                android:textColor="@color/colorPrimary"
                android:textSize="32sp" />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btnNum7"
                style="?android:attr/borderlessButtonStyle"
                android:layout_margin="2dp"
                android:background="@drawable/round_button"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/btn_num7_label"
                android:textColor="#37474F"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btnNum8"
                style="?android:attr/borderlessButtonStyle"
                android:layout_margin="2dp"
                android:background="@drawable/round_button"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/btn_num8_label"
                android:textColor="#37474F"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btnNum9"
                style="?android:attr/borderlessButtonStyle"
                android:layout_margin="2dp"
                android:background="@drawable/round_button"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/btn_num9_label"
                android:textColor="#37474F"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btnMultifly"
                style="?android:attr/borderlessButtonStyle"
                android:layout_margin="2dp"
                android:background="@drawable/round_button"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/btn_multifly_label"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="32sp" />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btnNum4"
                style="?android:attr/borderlessButtonStyle"
                android:layout_margin="2dp"
                android:background="@drawable/round_button"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/btn_num4_label"
                android:textColor="#37474F"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btnNum5"
                style="?android:attr/borderlessButtonStyle"
                android:layout_margin="2dp"
                android:background="@drawable/round_button"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/btn_num5_label"
                android:textColor="#37474F"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btnNum6"
                style="?android:attr/borderlessButtonStyle"
                android:layout_margin="2dp"
                android:background="@drawable/round_button"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/btn_num6_label"
                android:textColor="#37474F"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btnMinus"
                android:text="@string/btn_minus_label"
                android:layout_margin="2dp"
                android:textSize="32sp"
                android:textColor="@color/colorPrimary"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/round_button" />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btnNum1"
                style="?android:attr/borderlessButtonStyle"
                android:layout_margin="2dp"
                android:background="@drawable/round_button"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/btn_num1_label"
                android:textColor="#37474F"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btnNum2"
                style="?android:attr/borderlessButtonStyle"
                android:layout_margin="2dp"
                android:background="@drawable/round_button"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/btn_num2_label"
                android:textColor="#37474F"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btnNum3"
                style="?android:attr/borderlessButtonStyle"
                android:layout_margin="2dp"
                android:background="@drawable/round_button"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/btn_num3_label"
                android:textColor="#37474F"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btnPlus"
                android:text="@string/btn_plus_label"
                android:layout_margin="2dp"
                android:textSize="32sp"
                android:textColor="@color/colorPrimary"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/round_button" />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btnDot"
                style="?android:attr/borderlessButtonStyle"
                android:layout_margin="2dp"
                android:background="@drawable/round_button"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/btn_dot_label"
                android:textColor="#37474F"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btnNum0"
                style="?android:attr/borderlessButtonStyle"
                android:layout_margin="2dp"
                android:background="@drawable/round_button"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/btn_num0_label"
                android:textColor="#37474F"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btnPlusMinus"
                android:text="@string/btn_plus_minus_label"
                android:layout_margin="2dp"
                android:textSize="32sp"
                android:textColor="#37474F"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/round_button" />

            <Button
                android:id="@+id/btnEqual"
                android:text="@string/btn_equal_label"
                android:layout_margin="2dp"
                android:textSize="32sp"
                android:textColor="@android:color/white"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/round_button_color_primary" />

        </TableRow>

    </TableLayout>

</FrameLayout>